--- a/kohya_ss_colab.ipynb
+++ b/kohya_ss_colab.ipynb
@@ -43,11 +43,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
-        "id": "vmoRnFQEqOeY"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "vmoRnFQEqOeY",
+        "outputId": "46d128e8-cea6-4b5a-82b6-9bd2d00a9dc2"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/gdrive\n"
+          ]
+        }
+      ],
       "source": [
         "#@markdown #Step 1: Mounting Google Drive\n",
         "\n",
@@ -75,12 +87,36 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "cellView": "form",
-        "id": "jnhm7ycMrLWb"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 49,
+          "referenced_widgets": [
+            "5accd15ee82c4a4095dbb1e87cc0a4af",
+            "54b4970d9ebd42208b84bb9f1581618b",
+            "a3e2fdb2396c41c0ad10761ec56a0e48"
+          ]
+        },
+        "id": "jnhm7ycMrLWb",
+        "outputId": "ac9138fa-13e5-4dc4-fbfe-6565f75c6f7b"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Button(button_style='success', description='✓ Done', disabled=True, layout=Layout(min_width='50px'), style=But…"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "5accd15ee82c4a4095dbb1e87cc0a4af"
+            }
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "#@markdown #Kohya SS WebUI Installation\n",
         "\n",
@@ -146,12 +182,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "cellView": "form",
-        "id": "yjvkHRlDtDmV"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 49,
+          "referenced_widgets": [
+            "114ee93ee13a45dcb19202d9c3d3b37a",
+            "818d370d7af74c94b955f1aac8e6de4e",
+            "c76710219f4b4d1c86a825e1457170ee"
+          ]
+        },
+        "id": "yjvkHRlDtDmV",
+        "outputId": "2e43f5c9-d977-4ae7-e870-4e028e7ba09d"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "Button(button_style='success', description='✓ Done', disabled=True, layout=Layout(min_width='50px'), style=But…"
+            ],
+            "application/vnd.jupyter.widget-view+json": {
+              "version_major": 2,
+              "version_minor": 0,
+              "model_id": "114ee93ee13a45dcb19202d9c3d3b37a"
+            }
+          },
+          "metadata": {}
+        }
+      ],
       "source": [
         "#@markdown #Requirements Installation\n",
         "\n",
@@ -191,16 +252,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {
-        "id": "IzS3hvuTtTqW"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "IzS3hvuTtTqW",
+        "outputId": "361b2797-19b3-4756-cb09-fd34a69d1f91"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Please feel free to make any changes or improvements you think would enhance this setup. Your input and contributions are greatly appreciated!\n",
+            "/content/gdrive/MyDrive/sd/kohya_ss_colab/dreambooth_gui.py:350: SyntaxWarning: invalid escape sequence '\\.'\n",
+            "  \" can't train\\...033[0m\",\n",
+            "Traceback (most recent call last):\n",
+            "  File \"/content/gdrive/MyDrive/sd/kohya_ss_colab/kohya_gui.py\", line 4, in <module>\n",
+            "    from dreambooth_gui import dreambooth_tab\n",
+            "  File \"/content/gdrive/MyDrive/sd/kohya_ss_colab/dreambooth_gui.py\", line 13, in <module>\n",
+            "    from library.common_gui import (\n",
+            "  File \"/content/gdrive/MyDrive/sd/kohya_ss_colab/library/common_gui.py\", line 2, in <module>\n",
+            "    from easygui import msgbox\n",
+            "ModuleNotFoundError: No module named 'easygui'\n"
+          ]
+        }
+      ],
       "source": [
         "#@markdown # Start Kohya ss WebUI\n",
         "\n",
-        "User = \"\" #@param {type:\"string\"}\n",
-        "Password = \"\" #@param {type:\"string\"}\n",
+        "User = \"betoharger\" #@param {type:\"string\"}\n",
+        "Password = \"G@b@0n161720\" #@param {type:\"string\"}\n",
         "\n",
         "#@markdown - Adding a username and password is not necessary but it will improve the security of your Kohya instance.\n",
         "#@markdown ______\n",
@@ -228,6 +311,190 @@
     },
     "language_info": {
       "name": "python"
+    },
+    "widgets": {
+      "application/vnd.jupyter.widget-state+json": {
+        "5accd15ee82c4a4095dbb1e87cc0a4af": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ButtonModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "ButtonModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "ButtonView",
+            "button_style": "success",
+            "description": "✓ Done",
+            "disabled": true,
+            "icon": "",
+            "layout": "IPY_MODEL_54b4970d9ebd42208b84bb9f1581618b",
+            "style": "IPY_MODEL_a3e2fdb2396c41c0ad10761ec56a0e48",
+            "tooltip": ""
+          }
+        },
+        "54b4970d9ebd42208b84bb9f1581618b": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": "50px",
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "a3e2fdb2396c41c0ad10761ec56a0e48": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ButtonStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "ButtonStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "button_color": null,
+            "font_weight": ""
+          }
+        },
+        "114ee93ee13a45dcb19202d9c3d3b37a": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ButtonModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_dom_classes": [],
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "ButtonModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/controls",
+            "_view_module_version": "1.5.0",
+            "_view_name": "ButtonView",
+            "button_style": "success",
+            "description": "✓ Done",
+            "disabled": true,
+            "icon": "",
+            "layout": "IPY_MODEL_818d370d7af74c94b955f1aac8e6de4e",
+            "style": "IPY_MODEL_c76710219f4b4d1c86a825e1457170ee",
+            "tooltip": ""
+          }
+        },
+        "818d370d7af74c94b955f1aac8e6de4e": {
+          "model_module": "@jupyter-widgets/base",
+          "model_name": "LayoutModel",
+          "model_module_version": "1.2.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/base",
+            "_model_module_version": "1.2.0",
+            "_model_name": "LayoutModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "LayoutView",
+            "align_content": null,
+            "align_items": null,
+            "align_self": null,
+            "border": null,
+            "bottom": null,
+            "display": null,
+            "flex": null,
+            "flex_flow": null,
+            "grid_area": null,
+            "grid_auto_columns": null,
+            "grid_auto_flow": null,
+            "grid_auto_rows": null,
+            "grid_column": null,
+            "grid_gap": null,
+            "grid_row": null,
+            "grid_template_areas": null,
+            "grid_template_columns": null,
+            "grid_template_rows": null,
+            "height": null,
+            "justify_content": null,
+            "justify_items": null,
+            "left": null,
+            "margin": null,
+            "max_height": null,
+            "max_width": null,
+            "min_height": null,
+            "min_width": "50px",
+            "object_fit": null,
+            "object_position": null,
+            "order": null,
+            "overflow": null,
+            "overflow_x": null,
+            "overflow_y": null,
+            "padding": null,
+            "right": null,
+            "top": null,
+            "visibility": null,
+            "width": null
+          }
+        },
+        "c76710219f4b4d1c86a825e1457170ee": {
+          "model_module": "@jupyter-widgets/controls",
+          "model_name": "ButtonStyleModel",
+          "model_module_version": "1.5.0",
+          "state": {
+            "_model_module": "@jupyter-widgets/controls",
+            "_model_module_version": "1.5.0",
+            "_model_name": "ButtonStyleModel",
+            "_view_count": null,
+            "_view_module": "@jupyter-widgets/base",
+            "_view_module_version": "1.2.0",
+            "_view_name": "StyleView",
+            "button_color": null,
+            "font_weight": ""
+          }
+        }
+      }
     }
   },
   "nbformat": 4,
