--- a/kohya_ss_colab.ipynb
+++ b/kohya_ss_colab.ipynb
@@ -43,7 +43,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -182,7 +182,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "cellView": "form",
         "colab": {
@@ -252,7 +252,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -303,6 +303,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
+      "gpuType": "T4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -495,7 +496,8 @@
           }
         }
       }
-    }
+    },
+    "accelerator": "GPU"
   },
   "nbformat": 4,
   "nbformat_minor": 0
